# tiny_worm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
c/include/: named_queue.h
c/src/: named_queue.c
c/test/: named_queue.c
cpp/test/: raw_socket.cpp
include/: cli_option.hpp  ini.hpp  raw_socket.hpp
rc/: tiny_worm.rc
src/: CMakeLists.txt  cli_option.cpp  ini.cpp  raw_socket.cpp
test/: CMakeLists.txt  test_ini.cpp
